[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unrealm"
version = "0.1.0"
description = "Detector and response agent for the Realm C2 framework"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["security", "dfir", "c2", "realm", "detection"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

# psutil is optional but strongly recommended for richer process/network inspection
dependencies = []

[project.optional-dependencies]
full = ["psutil>=5.9"]

[project.scripts]
unrealm = "unrealm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["unrealm*"]
